examples/c/error-codes/undefined/UB-TDG7-bad-static.output
UB-TDG7-bad-static.c:3:6: error: 'void' as parameter must not have type qualifiers
int f(const void){
     ^
1 error generated.
